kubernetes/argo-cd/projects/nebius/production-hm/spark-history-server/environments/production/kubernetes-manifests/hm-spark-history-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hm-spark-history-server-service
  namespace: production-hm-spark-history-server
  labels:
    app.kubernetes.io/name: spark-history-server
    app.kubernetes.io/part-of: production-hm-spark-history-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 18080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: spark-history-server
